--- a/src/index.css
+++ b/src/index.css
@@ -16,10 +16,18 @@ body {
 }
 
 .container {
-  width: 90vw;
+  width: 80vw;
   height: 90vh;
   background-color: rgba(17, 25, 40, 0.75);
   backdrop-filter: blur(19px) saturate(180%);
   border-radius: 12px;
-  border: 1px solid rgba(225, 225, 225, 0.125);
+  border: 1px solid rgba(255, 255, 255, 0.125);
+  display: flex;
+}
+
+.loading {
+  padding: 50px;
+  font-size: 36px;
+  border-radius: 10px;
+  background-color: rgba(17, 25, 40, 0.9);
 }
